# simple-splat-mesh-viewer

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  CODE_REVIEW.md  Dockerfile  README.MD  SKETCHFAB-FEATURE-PARITY.md  annotation-system.js  archive-creator.js  archive-loader.js  config.js  config.js.template  constants.js  docker-compose.yml  docker-entrypoint.sh  eslint.config.js  index.html  main.js  nginx.conf  package.json  styles.css  ui-controller.js  utilities.js  vite.config.ts  vitest.config.ts
.github/workflows/: docker-push.yml  tauri-build.yml
docker/: Dockerfile  admin.html  config.js.template  docker-entrypoint.sh  extract-meta.sh  meta-server.js  nginx.conf  nginx.conf.template
docs/: ARCHITECTURE.md  ARCHIVE-GUIDE.md  CONFIGURATION.md  DEPLOYMENT.md  KIOSK-VIEWER.md  METADATA.md  ROADMAP.md  SHORTCOMINGS_AND_SOLUTIONS.md  SPECIFICATION.md  THREEJS_FORMATS_REFERENCE.md  USAGE.md
docs/archive/: ARCHIVE-GUIDE.md  METADATA.md  SPECIFICATION.md
docs/mockup/: design-mockup-editorial-details-v2.html  design-mockup-kiosk-deliverable.html  design-mockup-kiosk-editorial.html  design-mockup-main-app.html  editor-layout-v2.html  ribbon-two-row-preview.html
docs/reference/: ARCHITECTURE.md  CODE_REVIEW.md  REFACTOR_MAIN.md  SHORTCOMINGS_AND_SOLUTIONS.md  (+4 more)
scripts/: build-branded.mjs
src/: config.js  index.html  kiosk.css  main.js  main.ts  pre-module.js  styles.css  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: main-window.json
src-tauri/src/: lib.rs
(+67 files in other folders)
