[package]
name = "vitrine3d"
version = "1.0.0"
description = "Vitrine3D - Desktop"
edition = "2021"

[lib]
name = "vitrine3d_lib"
crate-type = ["lib", "cdylib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
hex = "0.4"

[profile.release]
codegen-units = 16
lto = false
